--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
       <p>clear</p>
     </div>
   </div>
+  <p id="skill" class="skill" style="display:none"></p> 
+  <p id="tool" class="tool" style="display:none"></p> 
+  <h2 class="new" style="display:none"></h2>
+  <h2 class="featured" id="featured" "  style="display:none"></h2>
   <main id="main">
   </main>
   <div class="attribution">
@@ -30,5 +34,6 @@
     Coded by <a href="#">Your Name Here</a>.
   </div>
   <script src="app.js" async></script>
+  <script src="index.js" defer></script>
 </body>
 </html>
