--- a/index.html
+++ b/index.html
@@ -17,10 +17,11 @@
 <body>
   <header>
   </header>
+   
   <div id="search-box">
     <div id="search">
-      <div></div>
-      <p>clear</p>
+      <div id="search-field"></div>
+      <p id="clear">clear</p>
     </div>
   </div>
   <p id="skill" class="skill" style="display:none"></p> 
@@ -34,6 +35,7 @@
     Coded by <a href="#">Your Name Here</a>.
   </div>
   <script src="app.js" async></script>
-  <script src="index.js" defer></script>
+  <script src="index.js" defer async="true"></script>
+  <script src="filter.js" defer async="true"></script>
 </body>
 </html>
