--- a/index.html
+++ b/index.html
@@ -10,29 +10,25 @@
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
-    .attribution { font-size: 11px; text-align: center; }
+    .attribution { font-size: 11px; text-align: center; margin: 40px auto;}
     .attribution a { color: hsl(228, 45%, 44%); }
   </style>
 </head>
 <body>
   <header>
   </header>
-   
+ 
   <div id="search-box">
     <div id="search">
       <div id="search-field"></div>
       <p id="clear">clear</p>
     </div>
   </div>
-  <p id="skill" class="skill" style="display:none"></p> 
-  <p id="tool" class="tool" style="display:none"></p> 
-  <h2 class="new" style="display:none"></h2>
-  <h2 class="featured" id="featured" "  style="display:none"></h2>
   <main id="main">
   </main>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="https://www.twitter.com/SRealgreat?">Samson Realgreat</a>.
   </div>
   <script src="app.js" async></script>
   <script src="index.js" defer async="true"></script>
